--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: monospace, monaco, "Microsoft YaHei","微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace, monaco, "Microsoft YaHei","微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
